--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="heading"><span>about</span> us</h1>
     <div class="row">
         <div class="video-container">
-            <video src="/images/video_20221030_170554.mp4 " loop autoplay muted></video>
+            <video src="./images/video_20221030_170554.mp4 " loop autoplay muted></video>
             <h3>best flowers shop</h3>
         </div>
         <div class="content">
@@ -71,7 +71,7 @@
 
 <section class="icons-container">
     <div class="icons">
-        <img src="/images/icon-1.png" alt="">
+        <img src="./images/icon-1.png" alt="">
         <div class="info">
             <h3>Free delivery</h3>
             <span>on all orders</span>
@@ -79,7 +79,7 @@
     </div>
 
     <div class="icons">
-        <img src="/images/icon-2.png" alt="">
+        <img src="./images/icon-2.png" alt="">
         <div class="info">
             <h3>10 days returns</h3>
             <span>Moneyback guarantee</span>
@@ -87,7 +87,7 @@
     </div>
 
     <div class="icons">
-        <img src="/images/icon-3.png" alt="">
+        <img src="./images/icon-3.png" alt="">
         <div class="info">
             <h3>offer & gits</h3>
             <span>on all orders</span>
@@ -95,7 +95,7 @@
     </div>
 
     <div class="icons">
-        <img src="/images/icon-4.png" alt="">
+        <img src="./images/icon-4.png" alt="">
         <div class="info">
             <h3>secure paymens</h3>
             <span>protected by paypal</span>
@@ -113,7 +113,7 @@
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="/images/img-1.jpg" alt="">
+                <img src="./images/img-1.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -129,7 +129,7 @@
         <div class="box">
             <span class="discount">-15%</span>
             <div class="image">
-                <img src="/images/img-2.jpg" alt="">
+                <img src="./images/img-2.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -145,7 +145,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="/images/img-3.jpg" alt="">
+                <img src="./images/img-3.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -161,7 +161,7 @@
         <div class="box">
             <span class="discount">-20%</span>
             <div class="image">
-                <img src="/images/img-4.jpg" alt="">
+                <img src="./images/img-4.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -177,7 +177,7 @@
         <div class="box">
             <span class="discount">-17%</span>
             <div class="image">
-                <img src="/images/img-5.jpg" alt="">
+                <img src="./images/img-5.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -193,7 +193,7 @@
         <div class="box">
             <span class="discount">-3%</span>
             <div class="image">
-                <img src="/images/img-6.png" alt="">
+                <img src="./images/img-6.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -209,7 +209,7 @@
         <div class="box">
             <span class="discount">-18%</span>
             <div class="image">
-                <img src="/images/img-7.jpg" alt="">
+                <img src="./images/img-7.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -225,7 +225,7 @@
         <div class="box">
             <span class="discount">-10%</span>
             <div class="image">
-                <img src="/images/img-8.jpg" alt="">
+                <img src="./images/img-8.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -241,7 +241,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="/images/img-9.jpg" alt="">
+                <img src="./images/img-9.jpg" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -257,7 +257,7 @@
         <div class="box">
             <span class="discount">-11%</span>
             <div class="image">
-                <img src="/images/img-10.png" alt="">
+                <img src="./images/img-10.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
