--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="box">
             <span class="discount">-9%</span>
             <div class="image">
-                <img src="/images/img-11.png" alt="">
+                <img src="./images/img-11.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -289,7 +289,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="/images/img-12.png" alt="">
+                <img src="./images/img-12.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -320,7 +320,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="/images/pic-1.jpg" alt="">
+                <img src="./images/pic-1.jpg" alt="">
                 <div class="user-info">
                     <h3>Pallavi Khurana</h3>
                     <span>Happy Customers</span>
@@ -339,7 +339,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="/images/pic2.jpg" alt="">
+                <img src="./images/pic2.jpg" alt="">
                 <div class="user-info">
                     <h3>Jyoti Singhania</h3>
                     <span>Happy Customers</span>
@@ -358,7 +358,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="/images/pic3.jpg" alt="">
+                <img src="./images/pic3.jpg" alt="">
                 <div class="user-info">
                     <h3>Babli Raj</h3>
                     <span>Happy Customers</span>
@@ -377,7 +377,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="/images/pic4.jpg" alt="">
+                <img src="./images/pic4.jpg" alt="">
                 <div class="user-info">
                     <h3>Anchal Desai</h3>
                     <span>Happy Customers</span>
@@ -403,7 +403,7 @@
             <input type="submit" value="send massage" class="btn">
         </form>
         <div class="image">
-            <img src="/images/contact-img.svg" alt="">
+            <img src="./images/contact-img.svg" alt="">
         </div>
     </div>
 </section>
@@ -440,7 +440,7 @@
             <a href="#">+123-456-7890</a>
             <a href="#">pallavi'sflower@gmail.com</a>
             <a href="#">Maharastra, Pune - 411052</a>
-          <img src="/images/payment.png" alt="">
+          <img src="./images/payment.png" alt="">
        
         </div>
     </div>
