--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="./images/img-12.png" alt="">
+                <img src="../images/img-1.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
