--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="box">
             <span class="discount">-9%</span>
             <div class="image">
-                <img src="./images/img-11.png" alt="">
+                <img src="images/img-11.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -289,7 +289,7 @@
         <div class="box">
             <span class="discount">-5%</span>
             <div class="image">
-                <img src="../images/img-1.png" alt="">
+                <img src="images/img-12.png" alt="">
                 <div class="icons">
                     <a href="#" class="fas fa-heart"></a>
                     <a href="#" class="cart-btn">add to cart</a>
@@ -440,7 +440,7 @@
             <a href="#">+123-456-7890</a>
             <a href="#">pallavi'sflower@gmail.com</a>
             <a href="#">Maharastra, Pune - 411052</a>
-          <img src="../images/payment.png" alt="">
+          <img src="images/payment.png" alt="">
        
         </div>
     </div>
