--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="../images/pic-1.jpg" alt="">
+                <img src="images/pic-1.jpg" alt="">
                 <div class="user-info">
                     <h3>Pallavi Khurana</h3>
                     <span>Happy Customers</span>
@@ -339,7 +339,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="../images/pic2.jpg" alt="">
+                <img src="images/pic2.jpg" alt="">
                 <div class="user-info">
                     <h3>Jyoti Singhania</h3>
                     <span>Happy Customers</span>
@@ -358,7 +358,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="../images/pic3.jpg" alt="">
+                <img src="images/pic3.jpg" alt="">
                 <div class="user-info">
                     <h3>Babli Raj</h3>
                     <span>Happy Customers</span>
@@ -377,7 +377,7 @@
             </div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sunt tenetur voluptas quibusdam voluptate aperiam eligendi, at velit enim? Odit quibusdam possimus necessitatibus atque at quia ut omnis, sunt corrupti! Id!</p>
             <div class="user">
-                <img src="../images/pic4.jpg" alt="">
+                <img src="images/pic4.jpg" alt="">
                 <div class="user-info">
                     <h3>Anchal Desai</h3>
                     <span>Happy Customers</span>
@@ -403,7 +403,7 @@
             <input type="submit" value="send massage" class="btn">
         </form>
         <div class="image">
-            <img src="../images/contact-img.svg" alt="">
+            <img src="images/contact-img.svg" alt="">
         </div>
     </div>
 </section>
